Fix sticky positioning and z-index for navbar and sidebars

--- a/quickstart/layouts/_default/home.html
+++ b/quickstart/layouts/_default/home.html
@@ -53,7 +53,7 @@
         
         <!-- Sidebar with enhanced styling -->
         <div class="col-lg-4">
-            <div class="sticky-top" style="top: 2rem;">
+            <div class="sticky-top">
                 <!-- Tag cloud with better styling -->
                 <div class="card shadow-sm mb-4 border-0">
                     <div class="card-header">
