--- a/quickstart/layouts/suggestions/list.html
+++ b/quickstart/layouts/suggestions/list.html
@@ -57,7 +57,7 @@
         </div>
         
         <div class="col-lg-4">
-            <div class="sticky-top" style="top: 2rem;">
+            <div class="sticky-top">
                 <div class="sidebar-card p-4 shadow-sm rounded bg-light mb-4">
                     <h4 class="border-bottom pb-2 mb-3 text-success"><i class="fas fa-info-circle me-2"></i>Why Contribute?</h4>
                     <p>Your suggestions help improve peer review systems across educational contexts. We value input from:</p>
