--- a/quickstart/layouts/comparison/method-comparison.html
+++ b/quickstart/layouts/comparison/method-comparison.html
@@ -126,7 +126,7 @@
         </div>
         
         <div class="col-lg-4">
-            <div class="sticky-top" style="top: 2rem;">
+            <div class="sticky-top">
                 <!-- Methods overview -->
                 <div class="sidebar-card p-4 shadow-sm rounded mb-4" style="background-color: #F5F5DC; border: 1px solid #E8E6D9;">
                     <h4 class="border-bottom pb-2 mb-3" style="color: #795548; border-color: #D7CCC8;"><i class="fas fa-clipboard-list me-2"></i>Methods Compared</h4>
