--- a/quickstart/layouts/comparison/multidimensional-analysis.html
+++ b/quickstart/layouts/comparison/multidimensional-analysis.html
@@ -84,7 +84,7 @@
         </div>
         
         <div class="col-lg-4">
-            <div class="sticky-top" style="top: 2rem;">
+            <div class="sticky-top">
                 <!-- Chart data explanation -->
                 <div class="sidebar-card p-4 shadow-sm rounded bg-light mb-4">
                     <h4 class="border-bottom pb-2 mb-3 text-primary"><i class="fas fa-info-circle me-2"></i>About This Analysis</h4>
