--- a/quickstart/layouts/feedback/effective-examples.html
+++ b/quickstart/layouts/feedback/effective-examples.html
@@ -314,7 +314,7 @@
         </div>
         
         <div class="col-lg-4">
-            <div class="sticky-top" style="top: 2rem;">
+            <div class="sticky-top">
                 <!-- Quick reference -->
                 <div class="sidebar-card p-4 shadow-sm rounded mb-4" style="background-color: #F5F5DC; border: 1px solid #E8E6D9;">
                     <h4 class="border-bottom pb-2 mb-3" style="color: #795548; border-color: #D7CCC8;"><i class="fas fa-clipboard-check me-2"></i>Feedback Checklist</h4>
