--- a/quickstart/layouts/partials/navbar.html
+++ b/quickstart/layouts/partials/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg sticky-top" style="background-color: #f5f5dc; border-bottom: 1px solid #d7ccc8;">
+<nav class="navbar navbar-expand-lg sticky-top">
   <div class="container">
     <a class="navbar-brand" href="/" style="color: #5D4037; font-weight: 600;">
       {{ .Site.Title }}
