add .DS_Store to gitignore

--- a/quickstart/layouts/comparison/linechart.html
+++ b/quickstart/layouts/comparison/linechart.html
@@ -30,7 +30,7 @@
     <!-- Import chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <!-- Import chart-init.js（Or write a new one that specialises in drawing line graphs, like chart-init-line.js） -->
+    <!-- Import chart-init.js (Or write a new one that specialises in drawing line graphs, like chart-init-line.js) -->
     <script src="/js/chart-init-line.js"></script>
 
   </body>
